--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "udacifitness-calendar": "^11.0.0"
+    "udacifitness-calendar": "github:ftrevo/react-native-calendars#master"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
