--- a/app.json
+++ b/app.json
@@ -1,15 +1,20 @@
 {
   "expo": {
+    "sdkVersion": "20.0.0",
     "name": "UdaciFitness",
+    "description": "The best triathlon training app in the world.",
     "slug": "UdaciFitness",
+    "version": "1.0.0",
     "platforms": [
       "ios",
       "android",
       "web"
     ],
-    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "notification": {
+      "icon": "http://www.student-scholarships.com/images/made/img/featured/nav_basketball_45_45.png"
+    },
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -22,7 +27,10 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "org.udacifitness.exp",
       "supportsTablet": true
-    }
+    },
+    "android": {
+      "package": "org.udacifitness.exp"
+     }
   }
-}
